--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -77,7 +77,7 @@
                     <div class="input-group-prepend">
                       <span class="input-group-text"><i class="ni ni-calendar-grid-58"></i></span>
                     </div>
-                    <input class="form-control datepicker" formControlName="dateOfBirth" placeholder="Date de naissance" name="dp" ngbDatepicker #d="ngbDatepicker" (click)="d.toggle()" type="text"/>
+                    <input class="form-control datepicker" formControlName="dateOfBirth" placeholder="Date de naissance"   type="date"/>
                   </div>
                   <!-- error -->
                   <div
