--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -20,11 +20,12 @@
               </div>
               <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
                 <div class="form-group" [ngClass]="{'focused':focus===true}">
-                  <div class="input-group input-group-alternative mb-3">
+                  <div class="input-group input-group-alternative mb-3" [ngClass]="{'has-success': myForm['firstName'].valid}">
                     <div class="input-group-prepend">
                       <span class="input-group-text"><i class="fa fa-address-card"></i></span>
                     </div>
-                    <input class="form-control" placeholder="Nom" formControlName="firstName" type="text" (focus)="focus=true" (blur)="focus=false">
+                    <input class="form-control" placeholder="Nom" formControlName="firstName" type="text" 
+                    (focus)="focus=true" (blur)="focus=false" [ngClass]="{'is-valid': myForm['firstName'].valid }">
                   </div>
                   <!-- error -->
                   <div class="text-danger"
@@ -33,11 +34,11 @@
                 </div>
                 </div>
                 <div class="form-group" [ngClass]="{'focused':focus===true}">
-                  <div class="input-group input-group-alternative mb-3">
+                  <div class="input-group input-group-alternative mb-3" [ngClass]="{'has-success': myForm['lastName'].valid}">
                     <div class="input-group-prepend">
                       <span class="input-group-text"><i class="fa fa-address-card"></i></span>
                     </div>
-                    <input class="form-control" placeholder="Prenom" type="text" formControlName="lastName"  (focus)="focus=true" (blur)="focus=false">
+                    <input class="form-control" placeholder="Prenom" type="text" formControlName="lastName" [ngClass]="{'is-valid': myForm['lastName'].valid}"  (focus)="focus=true" (blur)="focus=false">
                   </div>
                   <div class="text-danger"
                   *ngIf="submitted && myForm['lastName'].errors?.['required']">
@@ -45,14 +46,14 @@
                 </div>
                 </div>
                 <div class="form-group" [ngClass]="{'focused':focus===true}">
-                  <div class="input-group input-group-alternative mb-3">
+                  <div class="input-group input-group-alternative mb-3" [ngClass]="{'has-success': myForm['sexe'].valid}">
                     <div class="input-group-prepend">
                       <span class="input-group-text"><i class="fa fa-user"></i></span>
                     </div>
                     <select
                       class="custom-select form-control"
                       (change)="updateSexe($event.target.value)"
-                      formControlName="sexe"
+                      formControlName="sexe" [ngClass]="{'is-valid': myForm['sexe'].valid}"
                     >
                       <option value="">Choisir...</option>
                       <option
@@ -73,26 +74,26 @@
                 </div>
                 </div>
                 <div class="form-group">
-                  <div class="input-group input-group-alternative">
+                  <div class="input-group input-group-alternative" [ngClass]="{'has-success': myForm['dateOfBirth'].valid}">
                     <div class="input-group-prepend">
                       <span class="input-group-text"><i class="ni ni-calendar-grid-58"></i></span>
                     </div>
-                    <input class="form-control datepicker" formControlName="dateOfBirth" placeholder="Date de naissance"   type="date"/>
+                    <input class="form-control datepicker" formControlName="dateOfBirth" [ngClass]="{'is-valid': myForm['dateOfBirth'].valid}" placeholder="Date de naissance"   type="date"/>
                   </div>
                   <!-- error -->
                   <div
                   class="text-danger"
-                  *ngIf="submitted && myForm['email'].errors?.['required']"
+                  *ngIf="submitted && myForm['dateOfBirth'].errors?.['required']"
                 >
                  Veuillez entrer votre date de naissance
                 </div>
                 </div>
                 <div class="form-group" [ngClass]="{'focused':focus===true}">
-                  <div class="input-group input-group-alternative mb-3">
+                  <div class="input-group input-group-alternative mb-3" [ngClass]="{'has-success': myForm['address'].valid}">
                     <div class="input-group-prepend">
                       <span class="input-group-text"><i class="fa fa-home"></i></span>
                     </div>
-                    <input class="form-control" placeholder="Adresse" formControlName="address" type="text" (focus)="focus=true" (blur)="focus=false">
+                    <input class="form-control" placeholder="Adresse" formControlName="address" [ngClass]="{'is-valid': myForm['address'].valid}" type="text" (focus)="focus=true" (blur)="focus=false">
                      
                   </div>
                   <!-- error -->
@@ -104,52 +105,53 @@
                 </div>
                 </div>
                 <div class="form-group" [ngClass]="{'focused':focus===true}">
-                  <div class="input-group input-group-alternative mb-3">
+                  <div class="input-group input-group-alternative mb-3" [ngClass]="{'has-success': myForm['phoneNumber'].valid}">
                     <div class="input-group-prepend">
                       <span class="input-group-text"><i class="fa fa-phone"></i></span>
                     </div>
-                    <input class="form-control" placeholder="Telephone" formControlName="phoneNumber" type="text" (focus)="focus=true" (blur)="focus=false">
+                    <input class="form-control" placeholder="Telephone" formControlName="phoneNumber" [ngClass]="{'is-invalid': myForm['phoneNumber'].valid}" type="number" (focus)="focus=true" (blur)="focus=false">
                  
                   </div>
                    <!-- error -->
-                   <div
-                   class="text-danger"
-                   *ngIf="submitted && myForm['phoneNumber'].errors?.['required']"
-                 >
-                   Veuillez entrer votre numero de téléphone
-                 </div>
+                   <div class="text-danger" *ngIf="submitted && myForm['phoneNumber'].hasError('required')">
+                    Veuillez entrer votre numéro de téléphone
+                  </div>
+                  <div class="text-danger" *ngIf="submitted && myForm['phoneNumber'].hasError('invalidPhoneNumber')">
+                    Veuillez entrer un numéro de téléphone valide (10 chiffres)
+                  </div>
                 </div>
                 <div class="form-group" [ngClass]="{'focused':focus1===true}">
-                  <div class="input-group input-group-alternative mb-3">
+                  <div class="input-group input-group-alternative mb-3" [ngClass]="{'has-success': myForm['email'].valid}">
                     <div class="input-group-prepend">
                       <span class="input-group-text"><i class="ni ni-email-83"></i></span>
                     </div>
-                    <input class="form-control" placeholder="Email" formControlName="email" type="email" (focus)="focus1=true" (blur)="focus1=false">
+                    <input class="form-control" placeholder="Email" formControlName="email" type="email" [ngClass]="{'is-invalid': myForm['email'].valid}" (focus)="focus1=true" (blur)="focus1=false">
                     
                   </div>
-                  <!-- error -->
-                  <div
-                  class="text-danger"
-                  *ngIf="submitted && myForm['email'].errors?.['required']"
-                >
-                  Veuillez entrer votre adresse mail
-                </div>
+                  <div class="text-success" *ngIf="submitted && myForm['email'].valid">Email valide</div>
+                  <div class="text-danger" *ngIf="submitted && myForm['email'].errors?.required">
+                    Veuillez entrer votre adresse mail
+                  </div>
+                  <div class="text-danger" *ngIf="submitted && myForm['email'].errors?.email">
+                    Veuillez entrer une adresse mail valide
+                  </div>
                 </div>
                 <div class="form-group" [ngClass]="{'focused':focus2===true}">
-                  <div class="input-group input-group-alternative">
+                  <div class="input-group input-group-alternative" [ngClass]="{'has-success': myForm['password'].valid}">
                     <div class="input-group-prepend">
                       <span class="input-group-text"><i class="ni ni-lock-circle-open"></i></span>
                     </div>
-                    <input class="form-control" placeholder="Mot de passe" formControlName="password" type="password" (focus)="focus2=true" (blur)="focus2=false">
+                    <input class="form-control" placeholder="Mot de passe" formControlName="password" type="password" [ngClass]="{'is-invalid': myForm['password'].valid}" (focus)="focus2=true" (blur)="focus2=false">
                   
                   </div>
                   <!-- error -->
-                  <div
-                  class="text-danger"
-                  *ngIf="submitted && myForm['password'].errors?.['required']"
-                >
-                  Veuillez entrer un mot de passe correcte
-                </div>
+                  <div class="text-success" *ngIf="submitted && myForm['password'].valid">Mot de passe fort</div>
+                  <div class="text-danger" *ngIf="submitted && myForm['password'].hasError('required')">
+                    Veuillez entrer un mot de passe!
+                  </div>
+                  <div class="text-danger" *ngIf="submitted && myForm['password'].hasError('weakPassword')">
+                    Le mot de passe doit contenir au moins 3 types de caractères parmi majuscules, minuscules, chiffres, et caractères spéciaux.
+                  </div>
                 </div>
               
                 <div class="text-center">
