--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -18,50 +18,34 @@
               <div class="text-center text-muted mb-4">
                 Se Connecter
               </div>
-              <form *ngIf="!isLoggedIn"
-              name="form"
-              (ngSubmit)="f.form.valid && onSubmit()"
-              #f="ngForm"
-              novalidate>
+              <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
                 <div class="form-group mb-3" [ngClass]="{'focused':focus===true}">
                   <div class="input-group input-group-alternative">
                     <div class="input-group-prepend">
                       <span class="input-group-text"><i class="ni ni-email-83"></i></span>
                     </div>
-                    <input class="form-control" placeholder="Email" type="email" name="email"
-                    [(ngModel)]="form.email"
-                    required
-                    #email="ngModel" (focus)="focus=true" (blur)="focus=false">
+                    <input class="form-control" placeholder="Email" type="email" formControlName="email" (focus)="focus=true" (blur)="focus=false">
                   </div>
-                  <div
-                      class="alert alert-danger"
-                      role="alert"
-                      *ngIf="f.submitted && username.invalid"
-                    >
-                      Veuillez entrer votre adresse email!
-                    </div>
+                  <!-- error -->
+                  <div class="text-danger" *ngIf="submitted && myForm['email'].errors?.required">
+                    Veuillez entrer votre adresse mail
+                  </div>
+                  <div class="text-danger" *ngIf="submitted && myForm['email'].errors?.email">
+                    Veuillez entrer une adresse mail valide
+                  </div>
                 </div>
                 <div class="form-group" [ngClass]="{'focused':focus1===true}">
                   <div class="input-group input-group-alternative">
                     <div class="input-group-prepend">
                       <span class="input-group-text"><i class="ni ni-lock-circle-open"></i></span>
                     </div>
-                    <input class="form-control" placeholder="Mot de passe" type="password" name="password"
-                    [(ngModel)]="form.password"
-                    required
-                    minlength="6"
-                    #password="ngModel" (focus)="focus1=true" (blur)="focus1=false">
+                    <input class="form-control" placeholder="Mot de passe" type="password" formControlName="password" (focus)="focus1=true" (blur)="focus1=false">
                   </div>
-                  <div
-                    class="alert alert-danger"
-                    role="alert"
-                    *ngIf="f.submitted && password.invalid"
-                  >
-                    <div *ngIf="password.errors.required">Veuillez entrer votre mot de passe</div>
-                    <div *ngIf="password.errors.minlength">
-                      Password must be at least 6 characters
-                    </div>
+                 
+                  <div class="text-danger" *ngIf="submitted && myForm['password'].hasError('required')">
+                    Veuillez entrer un mot de passe!
                   </div>
+                 
                 </div>
                 <div class="custom-control custom-control-alternative custom-checkbox">
                   <input class="custom-control-input" id=" customCheckLogin" type="checkbox">
@@ -72,15 +56,7 @@
                 <div class="text-center">
                   <button type="submit" class="btn btn-primary my-4">Se Connecter</button>
                 </div>
-                <div class="form-group">
-                  <div
-                    class="alert alert-danger"
-                    role="alert"
-                    *ngIf="f.submitted && isLoginFailed"
-                  >
-                    Login failed: {{ errorMessage }}
-                  </div>
-                </div>
+                
               </form>
             </div>
           </div>
