--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -42,8 +42,15 @@
         <li class="nav-item" ngbDropdown placement="bottom-right">
           <a class="nav-link no-caret" id="navbar-primary_dropdown_1" ngbDropdownToggle>Mon compte</a>
           <div class="dropdown-menu-right" aria-labelledby="navbar-primary_dropdown_1" ngbDropdownMenu>
-            <a [routerLink]="['/login']" class="dropdown-item" href="javascript:void(0)">Se connecter</a>
-            <a [routerLink]="['/register']" class="dropdown-item" href="javascript:void(0)">S'inscrire</a>
+            <div *ngIf="currentUser; else loggedOut" >
+              <a [routerLink]="['/user-profile']" class="dropdown-item" href="javascript:void(0)">Profil</a>
+              <a  (click)="logout()" class="dropdown-item" href="javascript:void(0)" >Se deconnecter</a>
+            </div>
+            <ng-template #loggedOut>
+              <a [routerLink]="['/login']" class="dropdown-item" href="javascript:void(0)">Se connecter</a>
+              <a [routerLink]="['/register']" class="dropdown-item" href="javascript:void(0)">S'inscrire</a>
+            </ng-template>
+           
           </div>
         </li>
       </ul>
