--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -14,6 +14,20 @@
       <div class="row justify-content-center">
         <div class="col-lg-8">
           <div class="card bg-secondary shadow border-0">
+            <div class="card-header">
+              <div class="text-center text-muted mb-4">
+                <h2>Avez-vous deja un compte?</h2> 
+                <div class="container text-center justify-content-center">
+                  <div class="row justify-content-center">
+                    <button class="btn btn-outline-primary" (click)="navigateToExternalLink()">Se connecter</button>
+                  </div>
+                  <div class="row justify-content-center">
+                    <span class="tex-secondary">ou</span>
+                  </div>
+                </div>
+                
+              </div>
+            </div>
             <div class="card-body px-lg-5 py-lg-5">
               <div class="text-center text-muted mb-4">
                 <h1>Creer votre compte</h1> 
