--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -28,7 +28,10 @@
                 
               </div>
             </div>
-            <div class="card-body px-lg-5 py-lg-5">
+            <div class="loader-container" *ngIf="loading">
+              <div class="loader"></div>
+            </div>
+            <div class="card-body px-lg-5 py-lg-5" *ngIf="!loading">
               <div class="text-center text-muted mb-4">
                 <h1>Creer votre compte</h1> 
               </div>
@@ -130,9 +133,7 @@
                    <div class="text-danger" *ngIf="submitted && myForm['phoneNumber'].hasError('required')">
                     Veuillez entrer votre numéro de téléphone
                   </div>
-                  <div class="text-danger" *ngIf="submitted && myForm['phoneNumber'].hasError('invalidPhoneNumber')">
-                    Veuillez entrer un numéro de téléphone valide (10 chiffres)
-                  </div>
+            
                 </div>
                 <div class="form-group" [ngClass]="{'focused':focus1===true}">
                   <div class="input-group input-group-alternative mb-3" [ngClass]="{'has-success': myForm['email'].valid}">
