--- a/src/app/signup/signup.component.scss
+++ b/src/app/signup/signup.component.scss
@@ -1,3 +1,24 @@
 .bg-gradient-default {
     background: linear-gradient(191deg, #343278 0, #1a174d 100%) !important;
 }
+.loader-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh; /* Adjust the height as needed */
+  }
+  
+  .loader {
+    border: 4px solid rgba(0, 0, 0, 0.3);
+    border-radius: 50%;
+    border-top: 4px solid #3498db; /* Change the color as needed */
+    width: 40px;
+    height: 40px;
+    animation: spin 1s linear infinite;
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+  
