--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -23,6 +23,10 @@
         <h3 class="text-primary font-weight-light mb-2">Voici les Developpeurs du Site Web</h3>
         <h4 class="mb-0 font-weight-light">ETU 000882 Andrianirimanjaka Onja Mbola</h4>
         <h4 class="mb-0 font-weight-light">ETU 000909 Rakotoarinelina Valimbavaka Kiady Nekena</h4>
+
+        <h3 class="text-primary font-weight-light mb-2">Repositorie</h3>
+        <h4 class="mb-0 font-weight-light">https://github.com/Onja-Mbola/m1p11mean-OnjaMbola-KiadyNekena-Front</h4>
+        <h4 class="mb-0 font-weight-light">https://github.com/Onja-Mbola/m1p11mean-OnjaMbola-KiadyNekena-Back</h4>
       </div>
       
       <div class="col-lg-6">
